# mdnote

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/: sample.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build_dmg.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: AppIcon.icns  generate_all_v2.py  generate_icons.py  remove_bg.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: dialog.rs  file.rs  mod.rs  shell.rs
src/components/: AboutDialog.tsx  EditorPane.tsx  FindReplace.tsx  LazyEditorPane.tsx  PreviewPane.tsx  StatusBar.tsx  Toast.tsx  TocSidebar.tsx  Toolbar.tsx  WelcomeScreen.tsx
src/hooks/: useAutoSave.ts  useFileOps.ts  useShortcuts.ts  useUnsavedConfirm.ts
src/lib/: constants.ts  markdown-parser.ts  toc-extractor.ts
src/store/: useAppStore.ts
src/styles/: globals.css
src/types/: index.ts
src/workers/: md-worker.ts
